--- a/config.yml
+++ b/config.yml
@@ -25,7 +25,7 @@ pipeline:
   - name: SpacyEntityExtractor
     dimensions: ["PERSON"]
 
-  #### DUCKLING time ENTITY EXTRACTOR
+  #### DUCKLING TIME ENTITY EXTRACTOR
   - name: "DucklingEntityExtractor"
     # url of the running duckling server
     url: "http://localhost:8000"
