--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -2,90 +2,30 @@
 #### If you want to learn more, please see the docs: https://rasa.com/docs/rasa/testing-your-assistant
 
 stories:
-- story: happy path 1
+- story: check activity form
   steps:
   - user: |
-      hello there!
+      Hi
     intent: greet
+  - action: utter_ask_name
+  - user: |
+      Roberto
+    intent: supply_name
   - action: utter_greet
   - user: |
-      amazing
+      Great thanks
     intent: mood_great
   - action: utter_happy
-
-- story: happy path 2
-  steps:
+  - action: utter_ask_activity
   - user: |
-      hello there!
-    intent: greet
-  - action: utter_greet
+      I have a board meeting at 5pm tomorrow
+    intent: inform
+  - action: activity_form
+  - action: action_get_description_time
+  - action: utter_activity_slots
   - user: |
-      amazing
-    intent: mood_great
-  - action: utter_happy
-  - user: |
-      bye-bye!
+      Bye
     intent: goodbye
   - action: utter_goodbye
 
-- story: sad path 1
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      yes
-    intent: affirm
-  - action: utter_happy
 
-- story: sad path 2
-  steps:
-  - user: |
-      hello
-    intent: greet
-  - action: utter_greet
-  - user: |
-      not good
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      not really
-    intent: deny
-  - action: utter_goodbye
-
-- story: sad path 3
-  steps:
-  - user: |
-      hi
-    intent: greet
-  - action: utter_greet
-  - user: |
-      very terrible
-    intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - user: |
-      no
-    intent: deny
-  - action: utter_goodbye
-
-- story: say goodbye
-  steps:
-  - user: |
-      bye-bye!
-    intent: goodbye
-  - action: utter_goodbye
-
-- story: bot challenge
-  steps:
-  - user: |
-      are you a bot?
-    intent: bot_challenge
-  - action: utter_iamabot
